--- a/index.html
+++ b/index.html
@@ -40,8 +40,12 @@ th, td {
 <td>11/09/2023</td>
 <td><a href="https://profiles.sussex.ac.uk/p168364-christian-byrnes">Chris Byrnes</a></td>
 <td>Pippa Cole</td>
-<td>TBA</td>
-<td>TBA</td>
+<td>Primordial black holes: A (finely-tuned) opportunity for understanding cosmology</td>
+<td>From the origin of the merging compact objects seen by LIGO-Virgo-KAGRA to the source of the stochastic gravitational waves seen by pulsar timing arrays via 
+the QCD transition, there is a happy coincidence of scales which could point to primordial black holes. Combined with the long running dark matter search and hunt
+for new observables from inflation, there are many reasons to hope to learn a lot more from primordial black holes. However, generating such black holes in a simple model 
+remains far from simple.
+</td>
 <td>University of Sussex</td>
 <td>C4.174, GRAPPA, Science Park 904, Amsterdam</td>
 </tr>
@@ -55,7 +59,7 @@ th, td {
 <td>C4.174, GRAPPA, Science Park 904, Amsterdam</td>
 </tr>
 <tr>
-<td>13/11/2023</td>
+<td>02/11/2023 (Joint API/GRAPPA)</td>
 <td><a href="http://www.vallis.org/">Michele Vallisneri</a></td>
 <td>Samaya Nissanke</td>
 <td>TBA</td>
