--- a/index.html
+++ b/index.html
@@ -113,12 +113,57 @@ remains far from simple.
 <td>C4.174, GRAPPA, Science Park 904, Amsterdam</td>
 </tr>
 <tr>
-<td>26/02/2024</td>
+<td>18/03/2024</td>
+<td><a href="https://obs.carnegiescience.edu/dr-anthony-piro-0">Anthony Piro</a></td>
+<td>TBA</td>
+<td>TBA</td>
+<td>TBA</td>
+<td>Carnegie Observatories, 813 Santa Barbara Street, Pasadena, California.</td>
+<td>C4.174, GRAPPA, Science Park 904, Amsterdam</td>
+</tr>
+<tr>
+<td>22/04/2024</td>
 <td><a href="https://www.ntnu.edu/employees/foteini.oikonomou">Foteini Oikonomou</a></td>
 <td>TBA</td>
 <td>TBA</td>
 <td>TBA</td>
 <td>Norwegian University of Science and Technology.</td>
+<td>C4.174, GRAPPA, Science Park 904, Amsterdam</td>
+</tr>
+<tr>
+<td>08/05/2024</td>
+<td><a href="https://www.simonsfoundation.org/people/shirley-ho/">Shirley Ho</a></td>
+<td>TBA</td>
+<td>TBA</td>
+<td>TBA</td>
+<td>CCA, Flatiron Institute.</td>
+<td>C4.174, GRAPPA, Science Park 904, Amsterdam</td>
+</tr>
+<tr>
+<td>27/05/2024</td>
+<td><a href="https://www.nikhef.nl/~t61/index.shtml">Aart Heijboer</a></td>
+<td>TBA</td>
+<td>TBA</td>
+<td>TBA</td>
+<td>Nikhef.</td>
+<td>C4.174, GRAPPA, Science Park 904, Amsterdam</td>
+</tr>
+<tr>
+<td>10/06/2024</td>
+<td><a href="https://www.uva.nl/en/profile/h/a/mhaney/m.haney.html">Maria Haney</a></td>
+<td>TBA</td>
+<td>TBA</td>
+<td>TBA</td>
+<td>Nikhef/UvA.</td>
+<td>C4.174, GRAPPA, Science Park 904, Amsterdam</td>
+</tr>
+<tr>
+<td>20/06/2024</td>
+<td><a href="https://www.chiaramingarelli.com/">Chiara Mingarelli</a></td>
+<td>TBA</td>
+<td>TBA</td>
+<td>TBA</td>
+<td>Yale University.</td>
 <td>C4.174, GRAPPA, Science Park 904, Amsterdam</td>
 </tr>
 </tbody></table>
